<resources>
<string name="app_name">CAKESHOP APP</string>
<string name="title">WELCOME TO CAKESHOP</string>
<string name="roll_no">Enter DOB/Date: </string>
<string name="name">Enter Name: </string>
<string name="marks">Mail_of_Friend: </string>
<string name="add">Add</string>
<string name="delete">Delete Records</string>
<string name="modify">Modify</string>
<string name="view">Todays Birhdays</string>
<string name="view_all">View All</string>
<string name="show_info">Show Information</string>
    <string name="send">Send Email</string>
    <string name="disc">Discount</string>
    <string name="Flavours">Flavour</string>
    <string name="NAMEADD"><![CDATA[Name & Address]]></string>

</resources>
